update: csvの保存方法を変更

--- a/Csharp_3d_viewer.csproj
+++ b/Csharp_3d_viewer.csproj
@@ -19,4 +19,7 @@
     <PackageReference Include="OpenGL.Net" Version="0.8.4" />
     <PackageReference Include="OpenGL.Net.CoreUI" Version="0.8.4" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="temp\" />
+  </ItemGroup>
 </Project>
